# code

./: my_test.c
IPC/: mqclient.c  mqserver.c  unixcli.c  unixserver.c
KernelList/: Makefile  checkApi.c  checkApi.h  explain.txt  list.h  list_data.c  list_data.h  main.c  typedef.h  unitil.c  unitil.h
Socket_demo/TLV_TEST/: explain.txt  test.c
Socket_demo/Tcp/: Makefile  client.c  debug.c  debug.h  explain.txt  message.h  server.c
Sort/: bubble_sort.c  select_sort.c
big-little-endian/: 2.c  3.c
device_driver/char_driver/: Makefile  char_dev.c  test.c
gpstool/: 1.txt  gpstool.c  gpstool.h
interview_programe/: bisearch.c
ktime/: kernel_timer.c  mysigaction.c  mysignal.c
netfilter_test/: Makefile  netfillter_test.c
netlink/kernel/: Makefile  netlink_test.c
netlink/user/: Makefile  main.c
open_IO/: open.c  说明.txt
recursion/: recursion.c  revert_str.c  sysconvert.c  说明.txt
serial_api/: read.txt  serial.c  serial_t.c
src/: 1.c  2.c  Makefile  binary.c  bool.c  explain.txt  fnmatch.c  inet_aton.c  mac.c  my_strcpy.c  my_strstr.c  mygpsd.c_bubiao  ping.c  prime_number.c  str_replace.c  test_in_aton.c  说明.txt
src/macro/: Makefile  explain.txt  ifdef.c
str_to_hex/: main.c
ubustest/: Makefile
ubustest/files/etc/init.d/: ubustest
ubustest/src/: CMakeLists.txt  debug.c  main.c  ubus.c
ubustest/src/include/: test.h  ubus.h
ucitest/: Makefile  说明.txt
ucitest/files/etc/config/: myuci
ucitest/files/etc/init.d/: ucitest
ucitest/src/: Makefile  ucitest.c
va_List/: my_popen.c  pointer_function.c  system_cmd.c
